--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,3 +64,20 @@ show_error_codes = true
 strict_optional = true
 plugins = []
 
+[[tool.mypy.overrides]]
+module = [
+  "aiohttp",
+  "aiohttp.*",
+  "bs4",
+  "bs4.*",
+  "loguru",
+  "loguru.*",
+  "pandas",
+  "pandas.*",
+  "pydantic",
+  "pydantic.*",
+  "typer",
+  "yaml",
+]
+ignore_missing_imports = true
+
